--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="underline"></div>
                 <br>
                 <p id="clock-Text">00000</p>
-                <br>
+                <p style="line-height: 26vh;">
                  <button onclick="fullscreen()" id="FullScrButton" class="material-symbols-outlined"><img src="fullscreen.svg" alt="fullscreen" height="30vw" width="30vw" /></button>
             </div>
         </body>
